# staff-ee-r

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  likec4.config.json  progress.html  pyproject.toml  setup.sh
.claude/commands/: build-feature.md  build-feature.toml  orchestrate.md  orchestrate.toml  specify.md  specify.toml
.claude/orchestration/: README.md  ledger-schema.md  workflow-contract.md
.claude/orchestration/sample-run/: summary.json
.claude/orchestration/workflows/: build-feature.js
.claude/principles/: clean-code.md  domain-driven-design.md  essential-components-production-web-app.md  hexagonal-architecture.md  security.md  system-nfrs.md  testing-principles.md
.github/workflows/: ci.yml  integration.yml
docs/: conventions.md
docs/adr/: 001-hexagonal-eval-first-architecture.md  002-agent-orchestration.md  003-ingestion-service-pii-boundary.md  004-llm-provider-model-determinism.md  005-embedding-model.md  006-profile-text-index-wiring.md
docs/architecture/: L1-system-context.md  L2-containers.md  L3-matching-sequence.md  _spec.c4  model.staffeer.c4  view.staffeer.c4
docs/commands/: build-feature.md  build-feature.toml  orchestrate.md  orchestrate.toml  specify.md  specify.toml
docs/orchestration/: README.md  model-usage.md  workflow-contract.md
docs/orchestration/sample-run/: index.jsonl  ledger.jsonl
docs/orchestration/workflows/: build-feature.js
docs/principles/: 12-factor-app.md  system-design.md
docs/rules/: api-design.md  clean-code.md  code-quality.md  domain-driven-design.md  git-rules.md  likec4.md  long-running-tasks.md  solid-principles.md  spec-driven-development.md  task-execution.md  testing-principles.md
docs/tasks/: 00-build-plan.md  00a-ci-baseline.md  00b-contracts.md  01-foundation.md  02-beach-matching.md  03-skill-matching.md  04-ingestion-pii.md  05-semantic-retrieval.md  05a-semantic-wiring.md  05b-profile-embeddings.md  06-llm-reasoning-ranking.md  07-relevance-evals.md  08-supply-expansion.md  09-optional-enhancements.md  parallelization-guide.md
evals/: README.md  promptfoo.yaml  promptfoo_provider.py  test_constraint_scenarios.py  test_coverage_warning.py  test_ingestion_pii_scenarios.py  test_llm_soft_scoring_scenarios.py  test_ports_c2_scenarios.py  test_profile_embeddings_scenarios.py  test_semantic_retrieval_scenarios.py  test_semantic_wiring_scenarios.py
evals/datasets/: __init__.py  role_scenarios.py
evals/deepeval/: __init__.py  judge_prompts.py  metrics.py  test_faithfulness_scenarios.py  test_relevance_scenarios.py
src/staffeer/: __init__.py  composition.py  config.py
src/staffeer/adapters/: __init__.py  docling_profiles.py  dspy_openrouter.py  dspy_role_parser.py  markdown_feedback.py  memory_supply_demand.py  milvus_index.py  null_feedback.py  null_llm_reasoner.py  null_pii.py  null_profiles.py  null_role_parser.py  null_semantic_index.py  presidio_pii.py  xlsx_supply_demand.py
src/staffeer/cli/: __init__.py  main.py
src/staffeer/domain/: __init__.py  eligibility.py  errors.py  explain.py  index_builder.py  ingestion.py  matcher.py  models.py  profile_match.py  ranking.py  scoring.py  skills.py
src/staffeer/ports/: __init__.py  feedback.py  pii.py  profiles.py  reasoner.py  role_parser.py  semantic_index.py  supply_demand.py
src/staffeer/web/: app.py
src/staffeer/web/static/: index.html
tests/: conftest.py
tests/contract/: conftest.py  test_feedback.py  test_pii.py  test_profiles.py  test_reasoner.py  test_semantic_index.py  test_supply_demand.py
tests/integration/: test_cli.py  test_docling_profiles.py  test_dspy_openrouter.py  test_markdown_feedback.py  test_milvus_index.py  test_presidio_pii_logging.py  test_profile_indexing.py  test_semantic_wiring_integration.py  test_xlsx_supply_demand.py
tests/unit/: test_cli_helpers.py  test_composition.py  test_config.py  test_dependency_rule.py  test_eligibility.py  test_explain.py  test_free_text_role.py  test_index_builder.py  test_ingestion.py  test_matcher.py  test_models.py  test_pii_security.py  test_profile_match.py  test_ranking.py  test_scoring.py  test_semantic_wiring_unit.py  test_skills.py  test_soft_scoring.py
