[project]
name = "staffeer"
version = "0.0.0"
description = "Demand-supply matcher: ranked, explainable consultant shortlists for open roles."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "openpyxl>=3.1",
    "typer>=0.12",
]

[project.scripts]
staffeer = "staffeer.cli.main:main"

[project.optional-dependencies]
# Heavy groups stay optional so `make install` (core + dev) is fast until each slice lands.
llm = ["dspy-ai>=2.4"]
nlp = ["presidio-analyzer>=2.2", "presidio-anonymizer>=2.2", "spacy>=3.7", "pymilvus>=2.4"]
parse = ["docling>=2.0"]
eval = ["deepeval>=1.0"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/staffeer"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]

# openpyxl ships no type stubs; isolate the untyped import to the adapter boundary.
[[tool.mypy.overrides]]
module = ["openpyxl.*"]
ignore_missing_imports = true

# Presidio + Docling are optional heavy extras ([nlp]/[parse]); CI's fast lane runs without
# them. follow_imports=skip treats them as `Any` whether or not the extra is installed, so the
# adapters type-check identically in both environments (no install-dependent inline ignores).
[[tool.mypy.overrides]]
module = ["presidio_analyzer.*", "presidio_anonymizer.*", "docling.*"]
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
